--- a/content/website.yaml
+++ b/content/website.yaml
@@ -1,11 +1,11 @@
-- title: 'Developer Student Club' # for <title> tag
-  description: 'Developer Student Clubs(DSC) is a Google Developers program for university students to acquire technical skills and solve problems' #Meta description
-  university: 'UniversityName'
+- title: 'Developer Student Club - UoA' # for <title> tag
+  description: 'Developer Student Clubs (DSC) is a Google Developers program for university students to acquire technical skills and solve problems' # meta description
+  university: 'University of Auckland'
   lang: 'en'
   register: '' # optional
   calendar: '' # optional
   mail: '' # optional
   social:
     youtube: 'https://youtube.com'
-    github: 'https://github.com'
+    github: 'https://github.com/Developer-Student-Club-UoA/'
     twitter: 'https://twitter.com'
