Add discord icon link

--- a/content/teams.yaml
+++ b/content/teams.yaml
@@ -26,7 +26,7 @@
     linkedin: https://www.linkedin.com/in/david-xiao-081854190/
 
 - name: Matt Moran
-  role: Treasurer
+  role: Treasurer | Tech Team
   img: images/teams/avatar.png
   descs:
     - Web / Node dev
