Update Beverley's description

--- a/content/teams.yaml
+++ b/content/teams.yaml
@@ -48,7 +48,7 @@
   role: Marketing Lead
   img: images/teams/beverley-sun.jpg
   descs:
-    - Software Engineering Student
+    - Illustrator is better than Photoshop
     - Aspiring Web Developer
     - Runner
   social:
