Add Discord, Facebook, and Youtube links

--- a/content/teams.yaml
+++ b/content/teams.yaml
@@ -8,6 +8,8 @@
   social:
     github: https://github.com/AidenBurgess
     linkedin: https://www.linkedin.com/in/aidenburgess/
+    discord: null
+    facebook: null
 
 - name: Flynn Fromont
   role: Vice-Lead
